--- a/Source/FCPTools/FactionTools/FactionTools.csproj
+++ b/Source/FCPTools/FactionTools/FactionTools.csproj
@@ -34,4 +34,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FalloutCore\FCPCore.csproj" />
+  </ItemGroup>
 </Project>
