--- a/Source/FCPTools/FalloutCore/FCPCore.csproj
+++ b/Source/FCPTools/FalloutCore/FCPCore.csproj
@@ -1,19 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-    <LangVersion>12</LangVersion>
-    <AssemblyTitle>FCPFactionTools</AssemblyTitle>
-    <Product>FCPTools</Product>
-    <Copyright>Copyright ©Fallout Collaboration Project 2024</Copyright>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
     <RootNamespace>FCP.Core</RootNamespace>
-    <Authors>Fallout Collaboration Project</Authors>
     <AssemblyName>FCP_Core</AssemblyName>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <AssemblyTitle>Fallout Core Module</AssemblyTitle>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>portable</DebugType>
@@ -25,10 +14,6 @@
     <OutputPath>..\..\..\1.5\Assemblies\</OutputPath>
     <DefineConstants>TRACE;v1_5;</DefineConstants>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.*" />
-    <PackageReference Include="Lib.Harmony" Version="2.3.*" ExcludeAssets="runtime" />
-  </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
