--- a/Source/RadiantQuests/FCP-RadiantQuests.csproj
+++ b/Source/RadiantQuests/FCP-RadiantQuests.csproj
@@ -58,18 +58,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenStep_PawnRescue.cs" />
     <Compile Include="GenStep_SettlementScaleable.cs" />
     <Compile Include="GenStep_SpawnBuilding.cs" />
+    <Compile Include="HarmonyPatches\PawnRescuePatches.cs" />
     <Compile Include="Mod.cs" />
+    <Compile Include="PawnRescueUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestNode_GeneratePawns.cs" />
     <Compile Include="QuestNode_GetFactionFromList.cs" />
     <Compile Include="QuestNode_GetLeaderOfFaction.cs" />
+    <Compile Include="QuestNode_GetPawnKind.cs" />
     <Compile Include="QuestNode_GetSitePartDefsByTagsAndFaction.cs" />
+    <Compile Include="QuestNode_SetJoinPawnUponRescue.cs" />
     <Compile Include="QuestNode_SpawnRaiders.cs" />
     <Compile Include="QuestNode_SpawnSettlers.cs" />
+    <Compile Include="QuestPart_SetJoinPawnUponRescue.cs" />
     <Compile Include="QuestPart_SpawnRaiders.cs" />
     <Compile Include="QuestPart_SpawnSettlers.cs" />
+    <Compile Include="SitePartWorker_PawnRescue.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
