--- a/Source/RadiantQuests/FCP-RadiantQuests.csproj
+++ b/Source/RadiantQuests/FCP-RadiantQuests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CompAnimalCage.cs" />
     <Compile Include="CompProperties_AnimalCage.cs" />
     <Compile Include="DefOfs.cs" />
+    <Compile Include="GenStep_PawnRescueAnimal.cs" />
     <Compile Include="GenStep_PawnRescue.cs" />
     <Compile Include="GenStep_SettlementScaleable.cs" />
     <Compile Include="GenStep_SpawnBuilding.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Mod.cs" />
     <Compile Include="PawnRescueUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestNode_GetCageDef.cs" />
     <Compile Include="QuestNode_GeneratePawns.cs" />
     <Compile Include="QuestNode_GetFactionFromList.cs" />
     <Compile Include="QuestNode_GetLeaderOfFaction.cs" />
@@ -87,6 +89,7 @@
     <Compile Include="QuestNode_SpawnSettlers.cs" />
     <Compile Include="QuestPart_SpawnRaiders.cs" />
     <Compile Include="QuestPart_SpawnSettlers.cs" />
+    <Compile Include="SitePartWorker_PawnRescueAnimal.cs" />
     <Compile Include="SitePartWorker_PawnRescue.cs" />
     <Compile Include="WorkGiver_AnimalCageRefuel.cs" />
   </ItemGroup>
