--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FCP-UnityAssets"]
 	path = FCP-UnityAssets
-	url = https://github.com:FalloutCollaborationProject/FCP-UnityAssets.git
+	url = git@github.com:FalloutCollaborationProject/FCP-UnityAssets.git
