Implement variant B of shuttle crash

--- a/Source/CaravanIncidents/FCP_CaravanIncidents.csproj
+++ b/Source/CaravanIncidents/FCP_CaravanIncidents.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenStep_CrashSiteScavengers.cs" />
     <Compile Include="GenStep_CrashSiteAlive.cs" />
     <Compile Include="GenStep_CrashSiteDead.cs" />
     <Compile Include="IncidentUtility.cs" />
