--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -24,7 +24,7 @@
   <!-- References -->
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.*-*" />
-    <PackageReference Include="Lib.Harmony" Version="2.3.*" ExcludeAssets="runtime" />
+    <PackageReference Include="Lib.Harmony" Version="2.3.3" ExcludeAssets="runtime" />
   </ItemGroup>
 
   <!-- Global Usings -->
