Fix Ghoul Cache
* Change Ghoul_Cache LINQ to foreach loops. This prevents errors when there is no matching
* Consolidate GeneDef checking into one foreach loop
* Housekeep usings
* Update Access Methods due to project utilizing Krafs.RimWorld.Ref
* Add logging in debug builds for Ghoul Cache
* Update csproj so builds get put in proper folder

--- a/Source/FCPTools/FCP_Ghoul/FCP_Ghoul/FCP_Ghoul.csproj
+++ b/Source/FCPTools/FCP_Ghoul/FCP_Ghoul/FCP_Ghoul.csproj
@@ -17,27 +17,22 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>D:\Documentos\RimWorld\Mods\Ghouls Updated\1.5\Assemblies\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <OutputPath>..\..\..\..\1.5\Assemblies\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;v1_5;;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\..\..\..\1.5\Assemblies\</OutputPath>
+    <DefineConstants>TRACE;v1_5;;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>D:\Documentos\RimWorld\Mods\2009463077\Current\Assemblies\0Harmony.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>D:\Documentos\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="FCP_Core">
+      <HintPath>..\..\..\..\1.5\Assemblies\FCP_Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
