--- a/Source/FCP-NutrientPaste/FCP-NutrientPaste.csproj
+++ b/Source/FCP-NutrientPaste/FCP-NutrientPaste.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\1.5\Compatibilities\VNPE\Assemblies\</OutputPath>
+    <OutputPath>..\..\1.6\Compatibilities\VNPE\Assemblies\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,14 +25,18 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\1.6\Compatibilities\VNPE\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FCP_RadiantQuests">
+      <HintPath>..\..\1.6\Assemblies\FCP_RadiantQuests.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="PipeSystem">
-      <HintPath>..\..\..\..\..\..\..\..\workshop\content\294100\2023507013\1.5\Assemblies\PipeSystem.dll</HintPath>
+      <HintPath>..\..\..\VanillaExpandedFramework\1.6\Assemblies\PipeSystem.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Core" />
@@ -44,13 +48,6 @@
   <ItemGroup>
     <Compile Include="VNPEPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\FCP-RadiantQuests.csproj">
-      <Project>{5F1D8C6D-E127-4001-A575-E56D99DF271F}</Project>
-      <Name>FCP-RadiantQuests</Name>
-      <Private>False</Private>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
