--- a/Source/RadiantQuests/FCP-RadiantQuests.csproj
+++ b/Source/RadiantQuests/FCP-RadiantQuests.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Reference Include="PipeSystem">
       <HintPath>..\..\..\VanillaExpandedFramework\1.6\Assemblies\PipeSystem.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
