--- a/Source/FCPTools/FalloutCore/FCPCore.csproj
+++ b/Source/FCPTools/FalloutCore/FCPCore.csproj
@@ -8,12 +8,12 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>portable</DebugType>
     <OutputPath>..\..\..\1.6\Assemblies\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;v1_5;</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <OutputPath>..\..\..\1.6\Assemblies\</OutputPath>
-    <DefineConstants>TRACE;v1_5;</DefineConstants>
+    <DefineConstants>TRACE;</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Data.DataSetExtensions" />
@@ -263,8 +263,5 @@
       <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.XRModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="Krafs.Rimworld.Ref" Version="1.6.4518" />
   </ItemGroup>
 </Project>
