Change Tent namespace to FCP.Tents
The mod hasn't been updated since 1.3, he'll need to touch it anyway

--- a/Source/Tents/Tents.csproj
+++ b/Source/Tents/Tents.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Tent</RootNamespace>
+    <RootNamespace>FCP.Tents</RootNamespace>
     <AssemblyName>FCP_Tents</AssemblyName>
     <AssemblyTitle>Fallout Tents Module</AssemblyTitle>
     <AssemblyCopyright>Copyright © iforgotmysocks 2020</AssemblyCopyright>
