--- a/Source/Stims/Stims.csproj
+++ b/Source/Stims/Stims.csproj
@@ -1,77 +1,37 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{943CDE04-E14F-44ED-8D6F-51679A076F0F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StimPacks</RootNamespace>
-    <AssemblyName>StimPacks</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <LangVersion>latest</LangVersion>
+    <AssemblyName>FCP_StimPacks</AssemblyName>
+    <AssemblyTitle>Fallout Stimpacks Module</AssemblyTitle>
+    <LangVersion>14</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <OutputPath>../../1.6/Assemblies</OutputPath>
+  </PropertyGroup>
+
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>embedded</DebugType>
-    <Optimize>False</Optimize>
-    <OutputPath>..\Assemblies\</OutputPath>
+    <DebugType>portable</DebugType>
+    <Optimize>false</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
+
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>embedded</DebugType>
+    <DebugType>portable</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Comps\StimPack.cs" />
-    <Compile Include="DefExtensions\IngestibleStimExtension.cs" />
-    <Compile Include="Mod.cs" />
-    <Compile Include="ModConfig\Configs.cs" />
-    <Compile Include="ModConfig\ConfigUI.cs" />
-    <Compile Include="Patches\PawnPatches.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.6.4612-beta</Version>
+    <PackageReference Include="Krafs.Publicizer" Version="2.*">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Lib.Harmony">
-      <Version>2.4.1</Version>
-      <ExcludeAssets>runtime</ExcludeAssets>
-    </PackageReference>
+    <Publicize Include="Assembly-CSharp" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\Defs\HediffDefs\ExampleHediff.xml">
-      <Link>Defs\HediffDefs\ExampleHediff.xml</Link>
-    </Content>
-    <Content Include="..\Defs\OrderedTakeGroupDefs.xml">
-      <Link>Defs\OrderedTakeGroupDefs.xml</Link>
-    </Content>
-    <Content Include="..\Defs\ThingDefs\StimPackDrug.xml">
-      <Link>Defs\ThingDefs\StimPackDrug.xml</Link>
-    </Content>
-    <Content Include="..\Languages\English\Keyed\Config.xml">
-      <Link>Config.xml</Link>
-    </Content>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
