Finish Power Armor Project Merge

--- a/Source/FCPTools/FalloutCore/FCPCore.csproj
+++ b/Source/FCPTools/FalloutCore/FCPCore.csproj
@@ -4,6 +4,7 @@
     <RootNamespace>FCP.Core</RootNamespace>
     <AssemblyName>FCP_Core</AssemblyName>
     <AssemblyTitle>Fallout Core Module</AssemblyTitle>
+    <LangVersion>14</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>portable</DebugType>
