--- a/Source/Stims/Stims.csproj
+++ b/Source/Stims/Stims.csproj
@@ -4,8 +4,9 @@
     <RootNamespace>StimPacks</RootNamespace>
     <AssemblyName>FCP_StimPacks</AssemblyName>
     <AssemblyTitle>Fallout Stimpacks Module</AssemblyTitle>
-    <LangVersion>14</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>7.3</LangVersion>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <GenerateGlobalUsings>false</GenerateGlobalUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
