Move Faction Extensions into Faction Folder & Fix Namespaces

--- a/Source/FCPTools/FalloutCore/FCPCore.csproj
+++ b/Source/FCPTools/FalloutCore/FCPCore.csproj
@@ -267,4 +267,7 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Factions\Harmony\" />
+  </ItemGroup>
 </Project>
