Enlist: handle shuttles & hostile goodwill
Apply goodwill penalties and notify player when enlisting makes other factions hostile to the enlisted faction; new localization keys added for the letter. Add FCP_Core reference to the Enlist project. Replace fragile reflection logic for custom transport ships with direct type access: load shuttle defs via FactionModExtension, create shuttle Thing/CompTransporter, transfer caravan cargo to the shuttle, create TravellingTransporters with proper fields and add its transporter info; fall back to drop pods on failure. Also change texture lookup to reportFailure:false with BaseContent.BadTex fallback and update GetTransportPodsFloatMenuOptionsAt to accept an optional launchAction. Updated compiled assembly (FCP_Enlist.dll).

--- a/Source/Enlist/Enlist.csproj
+++ b/Source/Enlist/Enlist.csproj
@@ -36,4 +36,11 @@
     <Publicize Include="Assembly-CSharp" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="FCP_Core">
+      <HintPath>..\..\1.6\Assemblies\FCP_Core.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+  </ItemGroup>
+
 </Project>
