--- a/Source/Enlist/Enlist.csproj
+++ b/Source/Enlist/Enlist.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>FCP_Enlist</AssemblyName>
     <AssemblyTitle>Fallout Tents Module</AssemblyTitle>
     <AssemblyCopyright>Copyright © iforgotmysocks 2020</AssemblyCopyright>
-    <LangVersion>14</LangVersion>
+    <LangVersion>12</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
@@ -38,7 +38,8 @@
 
   <ItemGroup>
     <Reference Include="FCP_Core">
-      <HintPath>../../1.6/Assemblies/FCP_Core.dll</HintPath>
+      <HintPath>..\..\1.6\Assemblies\FCP_Core.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
 
