Add weapon backpack assembly; nerf laser beams
Add a new FCP.Core.Backpacks project/assembly and companion source: CompProperties_WeaponBackpack, CompWeaponBackpack, FCP_Backpacks.csproj and AssemblyInfo, plus a compiled DLL entry. Implement a Harmony patch on PawnRenderer.DrawEquipment to draw backpack graphics for equipped weapons. Also add equivalent component files under FCPTools/FalloutCore for integration. Update FCPCore.csproj to exclude Access, PowerArmor and JobGivers folders from compilation. Adjust ThingDefs_Laser_Beams.xml to reduce several beam damageAmountBase values and shorten lifetimeTicks (300 -> 100) to tone down laser beam effects.

--- a/Source/FCPTools/FalloutCore/FCPCore.csproj
+++ b/Source/FCPTools/FalloutCore/FCPCore.csproj
@@ -267,4 +267,15 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Access\**" />
+    <EmbeddedResource Remove="Access\**" />
+    <None Remove="Access\**" />
+    <Compile Remove="PowerArmor\**" />
+    <EmbeddedResource Remove="PowerArmor\**" />
+    <None Remove="PowerArmor\**" />
+    <Compile Remove="JobGivers\**" />
+    <EmbeddedResource Remove="JobGivers\**" />
+    <None Remove="JobGivers\**" />
+  </ItemGroup>
 </Project>
