--- a/Source/FCP_Backpacks/FCP_Backpacks.csproj
+++ b/Source/FCP_Backpacks/FCP_Backpacks.csproj
@@ -7,5 +7,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>..\..\1.6\Assemblies</OutputPath>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
   </PropertyGroup>
 </Project>
